--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nextjs-progressbar": "^0.0.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-query": "^3.34.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
