--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
+    "moment": "^2.29.1",
     "next": "12.0.8",
     "next-themes": "^0.0.15",
     "nextjs-progressbar": "^0.0.13",
