--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "marked": "^4.0.10",
     "moment": "^2.29.1",
     "next": "12.0.8",
+    "next-seo": "^4.29.0",
     "next-themes": "^0.0.15",
     "nextjs-progressbar": "^0.0.13",
     "react": "17.0.2",
