--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
+    "@hookform/resolvers": "^2.8.8",
     "marked": "^4.0.10",
     "moment": "^2.29.1",
     "next": "12.0.8",
@@ -17,8 +18,10 @@
     "nextjs-progressbar": "^0.0.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.24.2",
     "react-icons": "^4.3.1",
-    "react-query": "^3.34.8"
+    "react-query": "^3.34.8",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.0",
