--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@hookform/resolvers": "^2.8.8",
+    "axios": "^0.25.0",
+    "cookie": "^0.4.1",
+    "js-cookie": "^3.0.1",
     "marked": "^4.0.10",
     "moment": "^2.29.1",
     "next": "12.0.8",
     "next-seo": "^4.29.0",
     "next-themes": "^0.0.15",
     "nextjs-progressbar": "^0.0.13",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.2",
