--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@hookform/resolvers": "^2.8.8",
     "axios": "^0.25.0",
     "cookie": "^0.4.1",
-    "js-cookie": "^3.0.1",
     "marked": "^4.0.10",
     "moment": "^2.29.1",
     "next": "12.0.8",
@@ -23,6 +22,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.2",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.8",
     "yup": "^0.32.11"
