--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.8",
+    "react-share": "^4.4.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
