--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "nextjs-progressbar": "^0.0.13",
     "nookies": "^2.5.2",
     "react": "17.0.2",
+    "react-avatar": "^4.0.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.8",
     "react-share": "^4.4.0",
+    "react-spring": "^9.4.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
