--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@hookform/resolvers": "^2.8.8",
+    "aos": "^2.3.4",
     "axios": "^0.25.0",
     "cookie": "^0.4.1",
     "marked": "^4.0.10",
